# trabalho-02-pablocamila

relatorio/: Makefile  README.md  relatorio.tex
workspace/: bcc328.cabal  run_tests.sh
workspace/app/: Main.hs
workspace/src/SL/Frontend/Lexer/: SLLexer.x  Token.hs
workspace/src/SL/Frontend/Parser/: SLParser.y
workspace/src/SL/Frontend/Pretty/: SLPretty.hs
workspace/src/SL/Frontend/Syntax/: SLSyntax.hs
workspace/src/SL/Interpreter/: Interpreter.hs
workspace/src/SL/TypeChecker/: TypeChecker.hs
workspace/tests/: example2.sl  example4.sl  example6.sl
