cabal-version:      3.0
name:               bcc328
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-opts
  build-depends:
      base >= 4.17.0.0
    , mtl
    , containers
    , array
    , filepath
    , directory
    , tasty
    , tasty-golden
    , megaparsec >= 9.6
    , optparse-applicative
    , parser-combinators >= 1.3
    , pretty
    , haskeline
    , process
    , syb
    , algebraic-graphs

  build-tool-depends: happy:happy, alex:alex

  default-language: Haskell2010
  default-extensions: TypeSynonymInstances
                      FlexibleInstances
                      InstanceSigs
                      TupleSections
                      DeriveDataTypeable
                      FlexibleContexts
  ghc-options: -Wall -rtsopts -Wno-orphans

library
    import:           common-opts
    exposed-modules:
      SL.Frontend.Lexer.SLLexer
      SL.Frontend.Lexer.Token
      SL.Frontend.Parser.SLParser
      SL.Frontend.Pretty.SLPretty
      SL.Frontend.Syntax.SLSyntax
      SL.TypeChecker.TypeChecker
      
    hs-source-dirs:   src

    default-language: Haskell2010

executable bcc328
    import:           common-opts
    main-is:          Main.hs
    build-depends:
        base >=4.17.0.0,
        bcc328
    hs-source-dirs:   app
    default-language: Haskell2010